129) kernel: proc: check vma->vm_file before dereferencing.<br>
130) kernel: proc: don't show nonexistent capabilities.<br>
131) kernel: proc: fix inconsistent lock state.<br>
132) kernel: proc: allow proc_free_inum to be called from any context.<br>
133) kernel: proc: make proc_fd_permission() thread-friendly.<br>
134) kernel: proc: fix the potential use-after-free in first_tid().<br>
135) kernel: mm: do not invoke OOM killer on kernel fault OOM.<br>
136) kernel: mm: account the total_vm in the vm_stat_account().<br>
137) kernel: mm: fix potential anon_vma locking issue in mprotect().<br>
138) kernel: mm: count the number of pages affected in change_protection().<br>
139) kernel: mm: optimize the TLB flush of sys_mprotect() and change_protection() users.<br>
140) kernel: mm: account for a THP NUMA hinting update as one PTE update.<br>
141) kernel: mm: do not flush TLB during protection change if !pte_present && !migration_entry.<br>
<br>
<br>
<b>4.0.x</b><br>
1) build_system: add strace v4.11 for easy debug.<br>
2) uclibc: enable relro,now,noexecstack options.<br>
3) busybox: add taskset and chrt applets.<br>
4) dnsmasq: up to 2.76test9 version.<br>
5) goahead: fix types convert in value.<br>
6) goahead: replace min/max macros to new with type check.<br>
7) goahead: stick to cpu0.<br>
8) goahead: fix potentional data corrupt in socketWrite/Read.<br>
9) init.d: irqbalance skip ipi irq`s.<br>
10) kernel: mips: highmem: turn flush_cache_kmaps into a no-op.<br>
12) kernel: mips: fix 64k page support for 32 bit kernels.<br>
13) kernel: mips: fix FPU disable with preemption.<br>
14) kernel: math-emu: fix floating-point to integer unsigned saturation.<br>
15) kernel: math-emu: fix floating-point to integer overflow detection.<br>
16) kernel: net: af_unix: don't set err in unix_stream_read_generic unless there was an error.<br>
17) kernel: net: af_unix: guard against other == sk in unix_dgram_sendmsg.<br>
<br>
<br>
<br>