@@ -1327,7 +1327,7 @@ static int evalFunction(ej_t *ep)
 		return -1;
 	}
 
-	fn = (int (*)(int, void*, int, char_t**)) sp->content.value.integer;
+	fn = (int (*)(int, void*, int, char_t**)) sp->content.value.symbol;
 	if (fn == NULL) {
 		ejError(ep, T("Undefined procedure %s"), ep->func->fname);
 		return -1;
@@ -1477,7 +1477,7 @@ void *ejGetGlobalFunction(int eid, char_t *name)
 	}
 
 	if ((sp = symLookup(ep->functions, name)) != NULL) {
-		fn = (int (*)(int, void*, int, char_t**)) sp->content.value.integer;
+		fn = (int (*)(int, void*, int, char_t**)) sp->content.value.symbol;
 		return (void*) fn;
 	}
 	return NULL;
